--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,7 @@ pandas
 numpy
 matplotlib
 pyfolio
-decorator, matplotlib, numpy, pandas, scikit-learn, scipy, tabulate, yfinance
+decorator
+scikit-learn
+scipy
+tabulate
